# pre-pretraining

./: .gitignore  README.md  aggregate_pruning.py  eval_checkpoint.py  l0.py  modeling_ppt_neox.py  prune.py  pyproject.toml  requirements.txt  save_avg_activations.py  train.py
scripts/: eval.sh  make_ppt_data.sh  prune.sh  slurm_pretrain_c4.sh  slurm_pretrain_c4_shuff_dyck.sh  slurm_pretrain_shuff_dyck.sh  slurm_submit_all.sh  train.sh
src/: grammar.py  utils.py
