[project]
name = "pre-pretraining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.0.0",
    "fire>=0.4.0",
    "flash-attn>=2.8.3",
    "numpy>=2.2.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.15.0",
    "torch>=2.5.0",
    "transformers>=4.47.0",
    "trl>=0.13.0",
    "wandb>=0.22.2",
]
